--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -16,6 +16,13 @@
     -webkit-justify-content: flex-start;
             justify-content: flex-start;
 }
+@mixin full-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
 
 %footer-logo-border-line {
     position: absolute;
