--- a/resources/assets/sass/frontend/template/grapeking/materials.scss
+++ b/resources/assets/sass/frontend/template/grapeking/materials.scss
@@ -1,3 +1,68 @@
 .material-slide {
+
+    * {
+        transition: all .5s ease-out;
+    }
+    .material-item {
+        overflow: hidden;
+        height: 700px;
+
+        &:hover, &.active {
+            .material-bg {
+                transform: scale(1.1);
+            }
+            .material-mask {
+                top: 420px;
+                .material-info {
+                    margin-bottom: 30px;
+                    .material-logo {
+                        transform: rotate(360deg);
+                    }
+                    .text {
+                        height: 175px;
+                    }
+                }
+            }
+        }
+        .material-bg {
+            @include full-cover;
+            background-position: center;
+            background-size: cover;
+        }
+        .material-mask {
+            @include full-cover;
+            @include force-center;
+            background-color: rgba($color: #000000, $alpha: .5);
+
+            .material-info {
+                text-align: center;
+
+                h4 {
+                    font-size: 22px;
+                    color: white;
+                    margin: 30px 0;
+                }
+                .material-logo {
+                    @include force-center;
+                    margin: 0 auto;
+                    width: 150px;
+                    height: 150px;
+                    border-radius: 50%;
+                    box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .7);
     
+                    img {
+                        width: 60%;
+                    }
+                }
+                .text {
+                    overflow: hidden;
+                    color: white;
+                    text-align: left;
+                    font-size: 16px;
+                    padding: 0px 50px;
+                    height: 0;
+                }
+            }
+        }
+    }
 }
