--- a/resources/assets/sass/frontend-style.scss
+++ b/resources/assets/sass/frontend-style.scss
@@ -50,3 +50,5 @@
 @import "frontend/template/grapeking/prod";
 
 @import "frontend/template/grapeking/materials";
+
+@import "frontend/template/grapeking/one-stop-flow";
