--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -1315,6 +1315,11 @@ a.toggle-locale-btn {
                     color: #999;
                     font-size: 15px;
                     line-height: 30px;
+                    overflow : hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 4;
+                    -webkit-box-orient: vertical;
                 }
                 .btn-section {
                     padding: 25px 0;
