--- a/resources/assets/sass/frontend/template/grapeking/materials.scss
+++ b/resources/assets/sass/frontend/template/grapeking/materials.scss
@@ -1,69 +1,95 @@
-.material-slide {
+.material-slide-container {
     overflow: hidden;
 
     * {
         transition: all .5s ease-out;
     }
-    .material-item {
-        overflow: hidden;
-        height: 700px;
+    .prev-arrow, .next-arrow {
+        @include force-center;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 40px;
+        background-color: rgba($color: #fff, $alpha: .3);
+        color: rgba($color: #fff, $alpha: .5);
 
-        &:hover, &.active {
+        &:hover {
+            width: 45px;
+            background-color: rgba($color: #fff, $alpha: .6);
+            color: rgba($color: #fff, $alpha: 1);
+        }
+    }
+    .prev-arrow {
+        left: 0;
+    }
+    .next-arrow {
+        right: 0;
+    }
+
+    .material-slide {
+    
+        .material-item {
+            overflow: hidden;
+            height: 700px;
+    
+            &:hover, &.active {
+                .material-bg {
+                    transform: scale(1.1);
+                }
+                .material-mask {
+                    top: 420px;
+                    .material-info {
+                        margin-bottom: 30px;
+                        .material-logo {
+                            transform: rotate(360deg);
+                        }
+                        .text {
+                            height: 175px;
+                        }
+                    }
+                }
+            }
             .material-bg {
-                transform: scale(1.1);
+                @include full-cover;
+                background-position: center;
+                background-size: cover;
             }
             .material-mask {
-                top: 420px;
+                @include full-cover;
+                @include force-center;
+                background-color: rgba($color: #000000, $alpha: .5);
+    
                 .material-info {
-                    margin-bottom: 30px;
+                    text-align: center;
+    
+                    h4 {
+                        font-size: 22px;
+                        color: white;
+                        margin: 30px 0;
+                    }
                     .material-logo {
-                        transform: rotate(360deg);
+                        @include force-center;
+                        margin: 0 auto;
+                        width: 150px;
+                        height: 150px;
+                        border-radius: 50%;
+                        box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .7);
+        
+                        img {
+                            width: 60%;
+                        }
                     }
                     .text {
-                        height: 175px;
+                        overflow: hidden;
+                        color: white;
+                        text-align: left;
+                        font-size: 16px;
+                        padding: 0px 50px;
+                        height: 0;
                     }
-                }
-            }
-        }
-        .material-bg {
-            @include full-cover;
-            background-position: center;
-            background-size: cover;
-        }
-        .material-mask {
-            @include full-cover;
-            @include force-center;
-            background-color: rgba($color: #000000, $alpha: .5);
-
-            .material-info {
-                text-align: center;
-
-                h4 {
-                    font-size: 22px;
-                    color: white;
-                    margin: 30px 0;
-                }
-                .material-logo {
-                    @include force-center;
-                    margin: 0 auto;
-                    width: 150px;
-                    height: 150px;
-                    border-radius: 50%;
-                    box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .7);
-    
-                    img {
-                        width: 60%;
-                    }
-                }
-                .text {
-                    overflow: hidden;
-                    color: white;
-                    text-align: left;
-                    font-size: 16px;
-                    padding: 0px 50px;
-                    height: 0;
                 }
             }
         }
     }
 }
+
