--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2009,7 +2009,7 @@ a.toggle-locale-btn {
                         top: 18px;
                         // left: 120px;
                         right: 0px;
-                        content: attr(require-label);
+                        // content: attr(require-label);
                         // border: red thin solid;
                         padding: 1px 1px;
                         border-radius: 5px;
