--- a/resources/assets/sass/frontend/template/grapeking/materials.scss
+++ b/resources/assets/sass/frontend/template/grapeking/materials.scss
@@ -8,23 +8,24 @@
         @include force-center;
         display: none;
         position: absolute;
-        top: 0;
-        bottom: 0;
+        top: 400px;
+        // bottom: 0;
         width: 40px;
-        background-color: rgba($color: #fff, $alpha: .3);
-        color: rgba($color: #fff, $alpha: .5);
-
+        height: 40px;
+        border-radius: 50%;
+        background-color: rgba($color: #fff, $alpha: .6);
+        color: #333;
         &:hover {
-            width: 45px;
-            background-color: rgba($color: #fff, $alpha: .6);
-            color: rgba($color: #fff, $alpha: 1);
+            // width: 45px;
+            background-color: rgba($color: #fff, $alpha: .9);
+            color: #333;
         }
     }
     .prev-arrow {
-        left: 0;
+        left: 10px;
     }
     .next-arrow {
-        right: 0;
+        right: 10px;
     }
 
     .material-slide {
@@ -97,7 +98,7 @@
 @media (max-width: 768px) {
     .material-slide-container {
         .prev-arrow, .next-arrow {
-            display: block;
+            display: flex !important;
         }
     }
 }
