--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2912,7 +2912,7 @@ a.toggle-locale-btn {
         // margin-bottom: 80px;
         padding-top: 60px;
         padding-bottom: 80px;
-        background-image: url('/img/business/production_flow_bg.jpg');
+        // background-image: url('/img/business/production_flow_bg.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top left;
