--- a/resources/assets/sass/frontend-style.scss
+++ b/resources/assets/sass/frontend-style.scss
@@ -52,3 +52,5 @@
 @import "frontend/template/grapeking/materials";
 
 @import "frontend/template/grapeking/one-stop-flow";
+
+@import "frontend/template/grapeking/location";
