--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -3472,6 +3472,47 @@ a.toggle-locale-btn {
         }
     }
 
+    .content {
+        article.process {
+            .info {
+                .pic {
+                    .process-flow {
+                        padding-bottom: 180% !important;
+                        .process-img {
+                            &.success-mobile {
+                                bottom: 18% !important;
+                                width: 44.5% !important;
+                                left: 27.3% !important;
+                            }
+                            &.main {
+                                width: 72% !important;
+                            }
+                            &.left-side {
+                                height: 41.6% !important;
+                                left: 0% !important;
+                            }
+                            &.right-side-2-mobile {
+                                right: 1.5% !important;
+                                width: 12% !important;
+                                bottom: 41% !important;
+                            }
+                            &.right-side-1 {
+                                display: none !important;
+                            }
+                            &.right-side-1-mobile {
+                                right: -3%;
+                                width: 17%;
+                                top: -21.5%;
+                                display: block !important;
+                            }
+                        }                        
+                    }                    
+                }                
+            }            
+        }        
+    }                       
+    
+
     .timeline {
         .container-timeline {
             width: 100%;
@@ -3760,15 +3801,30 @@ a.toggle-locale-btn {
                             width: 55.5%;
                             left: 8.3%;
                         }
+                        &.success-mobile {
+                            bottom: 7%;
+                            width: 55.5%;
+                            left: 8.3%;
+                            display: none;
+                        }
                         &.right-side-1 {
                             right: 1%;
                             width: 27%;
                             top: 31.5%;
                         }
+                        &.right-side-1-mobile {
+                            display: none;
+                        }
                         &.right-side-2 {
                             right: 11.5%;
                             width: 15%;
                             bottom: 35.5%;
+                        }
+                        &.right-side-2-mobile {
+                            right: 11.5%;
+                            width: 15%;
+                            bottom: 35.5%;
+                            display: none;
                         }
                     }
                 }
