--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -3509,7 +3509,10 @@ a.toggle-locale-btn {
                     }                    
                 }                
             }            
-        }        
+        }
+        // article.description {
+        //     margin-top: -300px;
+        // }
     }                       
     
 
