--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -3604,7 +3604,7 @@ a.toggle-locale-btn {
     
     .site-content {
         .index-info .index-info-text-section p {
-            text-align: left;
+            text-align: center;
         }
         .swiper-container .swiper-wrapper .swiper-slide .slide-item {
             transform-origin: 0 0;
