--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2454,7 +2454,7 @@ a.toggle-locale-btn {
                 height: 400px;
 
                 .link-image {
-                    background-position: center;
+                    background-position: top center;
                     background-size: cover;
                     display: inline-block;
                     text-decoration: none;
