--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -4130,6 +4130,8 @@ a.toggle-locale-btn {
     }
 
     .site-content .production-tabs .tab-content.tunnel .tab-pane .info {
+        height: auto;
+        padding-top: 40px;
         background-color: rgba($color: #fff, $alpha: .5);  
     }
 
