--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -4132,7 +4132,13 @@ a.toggle-locale-btn {
     .site-content .production-tabs .tab-content.tunnel .tab-pane .info {
         height: auto;
         padding-top: 40px;
-        background-color: rgba($color: #fff, $alpha: .5);  
+        background-color: rgba($color: #fff, $alpha: .8);  
+
+        .info-content {
+            h3 {
+                font-size: 26px;
+            }
+        }
     }
 
     .mobile-site-header a.header-logo {
