--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2964,10 +2964,12 @@ a.toggle-locale-btn {
         .tab-btn {
             @include force-center;
             position: absolute;
-            width: 30px;
+            width: 25px;
             background-color: rgba($color: white, $alpha: .6);
             top: 0;
             bottom: 0;
+            color: white;
+            font-size: 14px;
 
             &.prev {
                 left: 0;
