--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -104,6 +104,10 @@
     display: none !important;
 }
 
+.mobile-to-show-flex {
+    display: none !important;
+}
+
 .contact-side-link {
     position: fixed;
     width: 100px;
