--- a/resources/assets/sass/frontend/template/grapeking/style.scss
+++ b/resources/assets/sass/frontend/template/grapeking/style.scss
@@ -14,6 +14,10 @@
             justify-content: flex-end;
 }
 
+.mobile-margin-top-50 {
+    margin-top: 50px;
+}
+
 .slick-dotted.slick-slider {
     margin-bottom: 50px;
 }
