--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -1847,7 +1847,7 @@ a.toggle-locale-btn {
         }
         &::after {
             content: '';
-            background: url('/img/site-logo/video.jpg');
+            background: url('https://grapeking.shuo-guo.net/img/site-logo/video.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
