--- a/resources/assets/sass/frontend/template/grapeking/materials.scss
+++ b/resources/assets/sass/frontend/template/grapeking/materials.scss
@@ -70,7 +70,7 @@
                     h4 {
                         font-size: 22px;
                         color: white;
-                        margin: 30px 0;
+                        margin: 30px 0 20px;
                     }
                     .material-logo {
                         @include force-center;
@@ -87,10 +87,18 @@
                     .text {
                         overflow: hidden;
                         color: white;
-                        text-align: left;
-                        font-size: 16px;
+                        text-align: center;
+                        font-size: 18px;
                         padding: 0px 50px;
                         height: 0;
+                        
+                        table {
+                            tr {
+                                td {
+                                    text-align: left;
+                                }
+                            }
+                        }
                     }
                 }
             }
