--- a/resources/assets/sass/frontend/template/grapeking/prod.scss
+++ b/resources/assets/sass/frontend/template/grapeking/prod.scss
@@ -1,29 +1,34 @@
 .factory-layout {
 
     .factory-title {
+        margin-top: 30px;
         width: 100%;
-        padding-top: 150px;
-        padding-bottom: 150px;
+        padding-top: 30px;
+        padding-bottom: 10px;
         display: inline-block;
-        background-image: url('/img/business/factory-layout.jpg');
+        // background-image: url('/img/business/factory-layout.jpg');
         background-position: center 20%;
         background-size: cover;
         .container {
             h1 {
                 color: white;
                 font-weight: 700;
-                text-shadow: 2px 2px 12px rgba($color: #000000, $alpha: .6);
+                font-size: 30px;
+                color: #333;
+                // text-shadow: 2px 2px 12px rgba($color: #000000, $alpha: .6);
+                text-align: center;
             }
         }
     }   
     @media (max-width: 991px) {
         .factory-title {
-            padding-top: 50px;
-            padding-bottom: 50px;
+            padding-top: 20px;
+            // padding-bottom: 10px;
         }
     }
     .factory-label-container {
         overflow: hidden;
+        margin-bottom: 20px;
         
         .factory-label {
             margin: -1px;
@@ -36,13 +41,14 @@
                 padding: 35px 15px;
                 flex: 0 0 25%;
                 text-align: center;
-                color: white;
+                color: #333;
                 font-weight: 700;
-                background: $main-color;
-                border: #e4e4e4 thin solid;
+                // background: $main-color;
+                // border: #e4e4e4 thin solid;
                 h2 {
                     font-weight: 700;
-                    font-size: 36px;
+                    font-size: 42px;
+                    color: $main-color;
                     margin: 5px 0 10px;
                 }
                 .label-inner-text {
